--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.profiles.active = notdummy
+
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testdb
 #spring.datasource.username=ayush
