Removed all hardcoded data from the application code to application.properties a) by using @Value. b) by using @PropertySource c) by using Environment d) by using @ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.profiles.active = notdummy
+
+id1 = 1
+name1 = abcd
+comment1 = asdf
+
+id2 = 2
+name2 = asdf
+comment2 = xyz
+
+my-values.id = 3
+my-values.name = jdt
+my-values.comment = asdf
